<resources>
    <string name="app_name">Learnity</string>
    <!-- MainActivity -->
    <string name="tv1">Learnity es una aplicación enfocada en aprender a aprender,
    aqui encontraras una amplia gama decursos donde podras aprender desde programar una computadora
    hasta tocar el ukulele.</string>
    <string name="BotonAnterior">Anterior</string>
    <!-- Menu -->
    <string name="MenuPrincipal">Home</string>
    <string name="MenuCursos">Cursos</string>
    <string name="MenuPerfil">Perfil</string>
    <!--Presentacion -->
    <string name="Omitir">Omitir</string>
    <string name="Sigueiente1"></string>
    <string name="Siguiente2"></string>

    <!-- Perfil_Usuario -->
    <string name="Ingreso">Ingresar</string>
    <string name="ButtonIngreso">Ingresar</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Contraseña</string>
    <!-- RegistroActivity -->
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="RepetirContraseña">Repetir Contraseña</string>
    <string name="BotonRegistrarse">Registrarse</string>
    <!--    cursos -->
    <string name="Cursos">Cursos</string>

    <string name="BotonCurso1">Curso de Python</string>
    <string name="BotonCurso2">Curso de JavaScript</string>
    <string name="BotonCurso3">Curso de Logíca de Programación</string>
    <string name="BotonCurso4">Curso de Ukulele</string>
    <!--Curso de python -->
    <string name="OverViewCours">Que aprenderás aqui:</string>
    <string name="Modulo1">Modulo 1</string>
    <string name="TextModulo1">Introducción a Python y a la programación.</string>
    <string name="Modulo2">Modulo 2</string>
    <string name="TextModulo2">Tipos de datos, variables, operaciones básicas de entrada y salida, operadores básicos.</string>
    <string name="Modulo3">Modulo 3</string>
    <string name="TextModulo3">Valores booleanos, ejecución condicional, bucles, listas y procesamiento de listas, operaciones lógicas y bit a bit.</string>
    <string name="Modulo4">Modulo 4</string>
    <string name="TextModulo4">Funciones, tuplas, diccionarios y procesamiento de datos.</string>
    <string name="BotonIniciarCurso">Comenzar</string>
    <string name="TextIniciar">Comenzar Curso</string>
    <!--Curso de ukulele -->
    <!--Presentacion texto -->
    <string name="Learnity">Learnity</string>
    <string name="steven_com">Steven.com</string>


</resources>